# KinetiCpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
.circleci/: config.yml
.github/: FUNDING.yml
Julia/: small_photo.jl
cmake/: CPM.cmake  CheckCxxCompilerFeatures.cmake  Dependencies.cmake  Sanitizers.cmake
examples/: CMakeLists.txt
examples/chapman/: benchmark.cpp  box_model.cpp  chapman.cpp  chapman.hpp  chapman.jl
sandbox/: atoms.hpp  csr.hpp  for_constexpr.hpp  jac.cpp  kpp_sunlight  kpp_sunlight.cpp  lamda_tmpl_iter.cxx  main.cxx  mechanism.hpp  row_sum.cxx  small_chapman_eigen.cpp  sunlight.csv  util.hpp
src/: atoms.hpp  function.hpp  jacobian.hpp  mechanism.hpp  model.hpp  rosenbrock.hpp  util.hpp
src/chem/: atom.hpp  atoms.hpp  expression.hpp  mechanism.hpp  model.hpp  util.hpp
src/kineticpp/: atom.hpp  dsl.hpp  expression.hpp  matrix.hpp  mechanism.hpp  model.hpp  util.hpp
src/kineticpp/dsl/: atom.hpp  expression.hpp  mechanism.hpp  reaction.hpp
src/kineticpp/math/: eigen.hpp  matrix.hpp  stdcpp.hpp
src/kineticpp/mathlib/: eigen.hpp  stdcpp.hpp
src/kineticpp/solver/: rosenbrock.hpp  status.hpp
src/linear_algebra/: eigen.hpp  matrix.hpp
src/solver/: rosenbrock.hpp
test/small/: .gitignore  Makefile  main.cpp  small_chapman  small_chapman.cpp
tools/convert_chemmech/: convert_chemmech.py
